--- a/html/persecun.html
+++ b/html/persecun.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/estiloscomp.css">
+        <link rel="stylesheet" href="../css/estilospersecun.css">
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
         <link rel="icon" href="../imagenes/ico-log/icono.png">
-        <title>Hora De Aventura</title>
+        <title>Personajes Secundarios</title>
     </head>
 
     <body>
@@ -32,36 +32,33 @@
             </nav>
 
         </header>
+
         <section>
 
             <article>
                 <div>
-                    <img src="../imagenes/retratos/distandisland.png" alt="Distand Islands">
+                    <img src="../imagenes/personajes/marceline.jpg" alt="Marceline">
+                    <h4>Marceline</h4>
                 </div>
                 <div>
-                    <h4>Distand Islands</h4>
-                    <p>Hora de Aventura: Tierras Lejanas (Adventure Time: Distant) es una miniserie de 4 especiales animados
-                        originales de HBO Max, centrada en diferentes historias de los personajes de Hora de Aventura y es producida
-                        por Cartoon Network Studios y Frederator Studios.
-                        Tiene un total de 4 episodios, cada una dura en promedio 1 hora.</p>
-                </div>
-            </article>
-            <article>
-                <div>
-                    <img src="../imagenes/retratos/fionnacake.png" alt="Fionna Y Cake">
+                    <img src="../imagenes/personajes/reyhelado.png" alt="Rey Helado">
+                    <h4>Rey Helado</h4>
                 </div>
                 <div>
-                    <h4>Fionna and Cake</h4>
-                    <p>Hora de Aventura: Con Fionna y Cake (Adventure Time: Fionna & Cake) es un spin-off 
-                        basado en Hora de Aventura. Es la primera serie de la franquicia que va destinada para un público adolescente
-                        y adulto. Fionna y Cake, con la ayuda del antiguo Rey Helado, Simon Petrikov, se embarcan en una aventura de
-                        salto multiversal y en un viaje de autodescubrimiento. Mientras tanto, un nuevo y poderoso antagonista,
-                        decidido a seguirles la pista y borrarlos de la existencia, acecha en las sombras. La serie iniciará con
-                        Fionna y Cake despertando en un mundo alterno en donde no existe la magia y donde no pueden recordar sus
-                        vidas o aventuras vividas.
-                        Tiene un total de 8 episodios. Cada una dura, en promedio, de 25 a 30 minutos.
-                    </p>
-                           
+                    <img src="../imagenes/personajes/princesaflama.jpg" alt="Princesa Flama">
+                    <h4>Princesa Flama</h4>
+                </div>
+                <div>
+                    <img src="../imagenes/personajes/arcoiris.jpg" alt="Arcoiris">
+                    <h4>Arcoiris</h4>
+                </div>
+                <div>
+                    <img src="../imagenes/personajes/princesagrumosa.png" alt="Princesa Grumosa">
+                    <h4>Princesa Grumosa</h4>
+                </div>
+                <div>
+                    <img src="../imagenes/personajes/gunter.png" alt="Princesa Grumosa">
+                    <h4>Princesa Grumosa</h4>
                 </div>
             </article>
 
