Corrección de Errores

--- a/contcomp.html
+++ b/contcomp.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/estiloscomp.css">
+        <link rel="stylesheet" href="css/estiloscomp.css">
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="../imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Hora De Aventura</title>
     </head>
 
@@ -14,7 +14,7 @@
 
         <header>
             <div>
-                <a href="index.html" class="logo"><img src="../imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
+                <a href="index.html" class="logo"><img src="imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
             </div>
             <nav>
                 <ul>
@@ -36,7 +36,7 @@
 
             <article>
                 <div>
-                    <img src="../imagenes/retratos/distandisland.png" alt="Distand Islands">
+                    <img src="imagenes/retratos/distandisland.png" alt="Distand Islands">
                 </div>
                 <div>
                     <h4>Distand Islands</h4>
@@ -48,7 +48,7 @@
             </article>
             <article>
                 <div>
-                    <img src="../imagenes/retratos/fionnacake.png" alt="Fionna Y Cake">
+                    <img src="imagenes/retratos/fionnacake.png" alt="Fionna Y Cake">
                 </div>
                 <div>
                     <h4>Fionna and Cake</h4>
@@ -68,10 +68,10 @@
         </section>
 
         <footer>
-            <a href="https://www.facebook.com/adventuretime/"><img src="../imagenes/redes/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/cartoonnetwork"><img src="../imagenes/redes/twitter.png" alt="Twitter"></a>
-            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="../imagenes/redes/youtube.png" alt="Youtube"></a>
-            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="../imagenes/redes/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/adventuretime/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/cartoonnetwork"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
     </body>
