--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="css/estilos.css">
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="../imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Hora De Aventura</title>
     </head>
 
@@ -14,7 +14,7 @@
 
         <header>
             <div>
-                <a href="index.html" class="logo"><img src="../imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
+                <a href="index.html" class="logo"><img src="imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
             </div>
             <nav>
                 <ul>
@@ -36,7 +36,7 @@
         <section>
             <article class="principal">
                 <div>
-                    <img src="../imagenes/ico-log/TITULO2.JPG" alt="HDA LOGO">
+                    <img src="imagenes/ico-log/TITULO2.JPG" alt="HDA LOGO">
                 </div>
                
                 <h1>FanPage de Hora de Aventura</h1>
@@ -59,37 +59,37 @@
             <article class="secundario">
                 <!--<h2>Imagenes Ilustrativas de la Serie</h2>-->
                 <div>
-                    <img src="../imagenes/retratos/casafinn.jpg" alt="Casa de Finn y Jake">
+                    <img src="imagenes/retratos/casafinn.jpg" alt="Casa de Finn y Jake">
                     <h4>Casa de Finn y Jake</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/retratos/casaprismo.jpg" alt="Casa de Prismo">
+                    <img src="imagenes/retratos/casaprismo.jpg" alt="Casa de Prismo">
                     <h4>Casa de Prismo</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/retratos/ciudadela.jpg" alt="La Ciudadela">
+                    <img src="imagenes/retratos/ciudadela.jpg" alt="La Ciudadela">
                     <h4>La Ciudadela</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/retratos/enchiridion.jpg" alt="El Enchiridion">
+                    <img src="imagenes/retratos/enchiridion.jpg" alt="El Enchiridion">
                     <h4>El Enchiridion</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/retratos/reinohelado.jpg" alt="El Reino Helado">
+                    <img src="imagenes/retratos/reinohelado.jpg" alt="El Reino Helado">
                     <h4>El Reino Helado</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/photopea/golb.jpg" alt="Golb">
+                    <img src="imagenes/photopea/golb.jpg" alt="Golb">
                     <h4>Golb</h4>
                 </div>
             </article>
         </section>
 
         <footer>
-            <a href="https://www.facebook.com/adventuretime/"><img src="../imagenes/redes/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/cartoonnetwork"><img src="../imagenes/redes/twitter.png" alt="Twitter"></a>
-            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="../imagenes/redes/youtube.png" alt="Youtube"></a>
-            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="../imagenes/redes/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/adventuretime/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/cartoonnetwork"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
     </body>
