--- a/persecun.html
+++ b/persecun.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/estilospersecun.css">
+        <link rel="stylesheet" href="css/estilospersecun.css">
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="../imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Personajes Secundarios</title>
     </head>
 
@@ -14,7 +14,7 @@
 
         <header>
             <div>
-                <a href="index.html" class="logo"><img src="../imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
+                <a href="index.html" class="logo"><img src="imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
             </div>
             <nav>
                 <ul>
@@ -37,27 +37,27 @@
 
             <article>
                 <div>
-                    <img src="../imagenes/personajes/marceline.jpg" alt="Marceline">
+                    <img src="imagenes/personajes/marceline.jpg" alt="Marceline">
                     <h4>Marceline</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/personajes/reyhelado.png" alt="Rey Helado">
+                    <img src="imagenes/personajes/reyhelado.png" alt="Rey Helado">
                     <h4>Rey Helado</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/personajes/princesaflama.jpg" alt="Princesa Flama">
+                    <img src="imagenes/personajes/princesaflama.jpg" alt="Princesa Flama">
                     <h4>Princesa Flama</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/personajes/arcoiris.jpg" alt="Arcoiris">
+                    <img src="imagenes/personajes/arcoiris.jpg" alt="Arcoiris">
                     <h4>Arcoiris</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/personajes/princesagrumosa.png" alt="Princesa Grumosa">
+                    <img src="imagenes/personajes/princesagrumosa.png" alt="Princesa Grumosa">
                     <h4>Princesa Grumosa</h4>
                 </div>
                 <div>
-                    <img src="../imagenes/personajes/gunter.png" alt="Princesa Grumosa">
+                    <img src="imagenes/personajes/gunter.png" alt="Princesa Grumosa">
                     <h4>Princesa Grumosa</h4>
                 </div>
             </article>
@@ -65,10 +65,10 @@
         </section>
 
         <footer>
-            <a href="https://www.facebook.com/adventuretime/"><img src="../imagenes/redes/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/cartoonnetwork"><img src="../imagenes/redes/twitter.png" alt="Twitter"></a>
-            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="../imagenes/redes/youtube.png" alt="Youtube"></a>
-            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="../imagenes/redes/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/adventuretime/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/cartoonnetwork"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
     </body>
