--- a/perprin.html
+++ b/perprin.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/estilospers.css">
+        <link rel="stylesheet" href="css/estilospers.css">
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="../imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Personajes Principales</title>
     </head>
 
@@ -14,7 +14,7 @@
 
         <header>
             <div>
-                <a href="index.html" class="logo"><img src="../imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
+                <a href="index.html" class="logo"><img src="imagenes/ico-log/espanollog.png" alt="Logo HDA"></a>
             </div>
             <nav>
                 <ul>
@@ -37,7 +37,7 @@
 
             <article>
                 <div>
-                    <img src="../imagenes/personajes/finn.jpeg" alt="Distand Islands">
+                    <img src="imagenes/personajes/finn.jpeg" alt="Distand Islands">
                 </div>
                 <div>
                     <h4>Finn, El Humano</h4>
@@ -49,7 +49,7 @@
             </article>
             <article>
                 <div>
-                    <img src="../imagenes/personajes/jake.jpg" alt="Distand Islands">
+                    <img src="imagenes/personajes/jake.jpg" alt="Distand Islands">
                 </div>
                 <div>
                     <h4>Jake, El Perro</h4>
@@ -63,7 +63,7 @@
             </article>
             <article>
                 <div>
-                    <img src="../imagenes/personajes/bmo.jpg" alt="Distand Islands">
+                    <img src="imagenes/personajes/bmo.jpg" alt="Distand Islands">
                 </div>
                 <div>
                     <h4>BMO</h4>
@@ -77,7 +77,7 @@
             </article>
             <article>
                 <div>
-                    <img src="../imagenes/personajes/dulceprincesa.jpg" alt="Distand Islands">
+                    <img src="imagenes/personajes/dulceprincesa.jpg" alt="Distand Islands">
                 </div>
                 <div>
                     <h4>Dulce Princesa</h4>
@@ -90,10 +90,10 @@
         </section>
 
         <footer>
-            <a href="https://www.facebook.com/adventuretime/"><img src="../imagenes/redes/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/cartoonnetwork"><img src="../imagenes/redes/twitter.png" alt="Twitter"></a>
-            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="../imagenes/redes/youtube.png" alt="Youtube"></a>
-            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="../imagenes/redes/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/adventuretime/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/cartoonnetwork"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
     </body>
