Actualizacion media queries
Agregue la opción de abrir imágenes.

--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estiloscontac.css">
+        <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
         <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Contacto</title>
@@ -50,6 +51,7 @@
             <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
+        <script src="js/lightbox-plus-jquery.js"></script>
     </body>
 
 </html>
