--- a/contcomp.html
+++ b/contcomp.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estiloscomp.css">
+        <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
         <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Hora De Aventura</title>
@@ -36,7 +37,7 @@
 
             <article>
                 <div>
-                    <img src="imagenes/retratos/distandisland.png" alt="Distand Islands">
+                    <a href="imagenes/retratos/distandisland.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/distandisland.png" alt="Distand Islands"></a>
                 </div>
                 <div>
                     <h4>Distand Islands</h4>
@@ -48,7 +49,7 @@
             </article>
             <article>
                 <div>
-                    <img src="imagenes/retratos/fionnacake.png" alt="Fionna Y Cake">
+                    <a href="imagenes/retratos/fionnacake.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/fionnacake.png" alt="Fionna Y Cake"></a>
                 </div>
                 <div>
                     <h4>Fionna and Cake</h4>
@@ -74,6 +75,7 @@
             <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
+        <script src="js/lightbox-plus-jquery.js"></script>
     </body>
 
 </html>
