--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estilos.css">
+        <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
         <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Hora De Aventura</title>
@@ -59,27 +60,27 @@
             <article class="secundario">
                 <!--<h2>Imagenes Ilustrativas de la Serie</h2>-->
                 <div>
-                    <img src="imagenes/retratos/casafinn.jpg" alt="Casa de Finn y Jake">
+                    <a href="imagenes/retratos/casafinn.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/casafinn.jpg" alt="Casa de Finn y Jake"></a>
                     <h4>Casa de Finn y Jake</h4>
                 </div>
                 <div>
-                    <img src="imagenes/retratos/casaprismo.jpg" alt="Casa de Prismo">
+                    <a href="imagenes/retratos/casaprismo.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/casaprismo.jpg" alt="Casa de Prismo"></a>
                     <h4>Casa de Prismo</h4>
                 </div>
                 <div>
-                    <img src="imagenes/retratos/ciudadela.jpg" alt="La Ciudadela">
+                    <a href="imagenes/retratos/ciudadela.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/ciudadela.jpg" alt="La Ciudadela"></a>
                     <h4>La Ciudadela</h4>
                 </div>
                 <div>
-                    <img src="imagenes/retratos/enchiridion.jpg" alt="El Enchiridion">
+                    <a href="imagenes/retratos/enchiridion.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/enchiridion.jpg" alt="El Enchiridion"></a>
                     <h4>El Enchiridion</h4>
                 </div>
                 <div>
-                    <img src="imagenes/retratos/reinohelado.jpg" alt="El Reino Helado">
+                    <a href="imagenes/retratos/reinohelado.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/reinohelado.jpg" alt="El Reino Helado"></a>
                     <h4>El Reino Helado</h4>
                 </div>
                 <div>
-                    <img src="imagenes/photopea/golb.jpg" alt="Golb">
+                    <a href="imagenes/retratos/golb.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/photopea/golb.jpg" alt="Golb"></a>
                     <h4>Golb</h4>
                 </div>
             </article>
@@ -92,6 +93,7 @@
             <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
+        <script src="js/lightbox-plus-jquery.js"></script>
     </body>
 
 </html>
