--- a/persecun.html
+++ b/persecun.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device.width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estilospersecun.css">
+        <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
         <link rel="icon" href="imagenes/ico-log/icono.png">
         <title>Personajes Secundarios</title>
@@ -37,27 +38,27 @@
 
             <article>
                 <div>
-                    <img src="imagenes/personajes/marceline.jpg" alt="Marceline">
+                    <a href="imagenes/personajes/marceline.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/marceline.jpg" alt="Marceline"></a>
                     <h4>Marceline</h4>
                 </div>
                 <div>
-                    <img src="imagenes/personajes/reyhelado.png" alt="Rey Helado">
+                    <a href="imagenes/personajes/reyhelado.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/reyhelado.png" alt="Rey Helado"></a>
                     <h4>Rey Helado</h4>
                 </div>
                 <div>
-                    <img src="imagenes/personajes/princesaflama.jpg" alt="Princesa Flama">
+                    <a href="imagenes/personajes/princesaflama.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/princesaflama.jpg" alt="Princesa Flama"></a>
                     <h4>Princesa Flama</h4>
                 </div>
                 <div>
-                    <img src="imagenes/personajes/arcoiris.jpg" alt="Arcoiris">
+                    <a href="imagenes/personajes/arcoiris.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/arcoiris.jpg" alt="Arcoiris"></a>
                     <h4>Arcoiris</h4>
                 </div>
                 <div>
-                    <img src="imagenes/personajes/princesagrumosa.png" alt="Princesa Grumosa">
+                    <a href="imagenes/personajes/princesagrumosa.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/princesagrumosa.png" alt="Princesa Grumosa"></a>
                     <h4>Princesa Grumosa</h4>
                 </div>
                 <div>
-                    <img src="imagenes/personajes/gunter.png" alt="Princesa Grumosa">
+                    <a href="imagenes/personajes/gunter.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/gunter.png" alt="Princesa Grumosa"></a>
                     <h4>Princesa Grumosa</h4>
                 </div>
             </article>
@@ -71,6 +72,7 @@
             <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
+        <script src="js/lightbox-plus-jquery.js"></script>
     </body>
 
 </html>
