--- a/perprin.html
+++ b/perprin.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device.width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/estilospers.css">
-        <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="imagenes/ico-log/icono.png">
-        <title>Personajes Principales</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device.width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilospers.css">
+    <link href="css/lightbox.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="icon" href="imagenes/ico-log/icono.png">
+    <title>Personajes Principales</title>
+</head>
 
     <body>
 
@@ -37,7 +38,7 @@
 
             <article>
                 <div>
-                    <img src="imagenes/personajes/finn.jpeg" alt="Distand Islands">
+                    <a href="imagenes/personajes/finn.jpeg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/finn.jpeg" alt="Finn" class="finn"></a>
                 </div>
                 <div>
                     <h4>Finn, El Humano</h4>
@@ -49,7 +50,7 @@
             </article>
             <article>
                 <div>
-                    <img src="imagenes/personajes/jake.jpg" alt="Distand Islands">
+                    <a href="imagenes/personajes/jake.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/jake.jpg" alt="Jake" class="jake"></a>
                 </div>
                 <div>
                     <h4>Jake, El Perro</h4>
@@ -63,7 +64,7 @@
             </article>
             <article>
                 <div>
-                    <img src="imagenes/personajes/bmo.jpg" alt="Distand Islands">
+                    <a href="imagenes/personajes/bmo.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/bmo.jpg" alt="BMO" class="bmo"></a>
                 </div>
                 <div>
                     <h4>BMO</h4>
@@ -77,7 +78,7 @@
             </article>
             <article>
                 <div>
-                    <img src="imagenes/personajes/dulceprincesa.jpg" alt="Distand Islands">
+                    <a href="imagenes/personajes/dulceprincesa.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/dulceprincesa.jpg" alt="Dulce Princesa" class="dulprin"></a>
                 </div>
                 <div>
                     <h4>Dulce Princesa</h4>
@@ -96,6 +97,7 @@
             <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
+        <script src="js/lightbox-plus-jquery.js"></script>
     </body>
 
 </html>
