--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/estiloscontac.css">
         <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/espanollog.png">
         <title>Contacto</title>
     </head>
 
