--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/estilos.css">
         <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/espanollog.png">
         <title>Hora De Aventura</title>
     </head>
 
@@ -80,7 +80,7 @@
                     <h4>El Reino Helado</h4>
                 </div>
                 <div>
-                    <a href="imagenes/retratos/golb.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/photopea/golb.jpg" alt="Golb"></a>
+                    <a href="imagenes/retratos/golb.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/golb.jpg" alt="Golb"></a>
                     <h4>Golb</h4>
                 </div>
             </article>
