--- a/perprin.html
+++ b/perprin.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/estilospers.css">
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="icon" href="imagenes/ico-log/icono.png">
+    <link rel="icon" href="imagenes/ico-log/espanollog.png">
     <title>Personajes Principales</title>
 </head>
 
@@ -50,7 +50,7 @@
             </article>
             <article>
                 <div>
-                    <a href="imagenes/personajes/jake.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/jake.jpg" alt="Jake" class="jake"></a>
+                    <a href="imagenes/personajes/jake.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/jake.png" alt="Jake" class="jake"></a>
                 </div>
                 <div>
                     <h4>Jake, El Perro</h4>
@@ -64,7 +64,7 @@
             </article>
             <article>
                 <div>
-                    <a href="imagenes/personajes/bmo.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/bmo.jpg" alt="BMO" class="bmo"></a>
+                    <a href="imagenes/personajes/bmo.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/bmo.png" alt="BMO" class="bmo"></a>
                 </div>
                 <div>
                     <h4>BMO</h4>
