--- a/persecun.html
+++ b/persecun.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/estilospersecun.css">
         <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/espanollog.png">
         <title>Personajes Secundarios</title>
     </head>
 
@@ -38,7 +38,7 @@
 
             <article>
                 <div>
-                    <a href="imagenes/personajes/marceline.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/marceline.jpg" alt="Marceline"></a>
+                    <a href="imagenes/personajes/marceline.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/marceline.png" alt="Marceline"></a>
                     <h4>Marceline</h4>
                 </div>
                 <div>
@@ -46,11 +46,11 @@
                     <h4>Rey Helado</h4>
                 </div>
                 <div>
-                    <a href="imagenes/personajes/princesaflama.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/princesaflama.jpg" alt="Princesa Flama"></a>
+                    <a href="imagenes/personajes/princesaflama.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/princesaflama.png" alt="Princesa Flama"></a>
                     <h4>Princesa Flama</h4>
                 </div>
                 <div>
-                    <a href="imagenes/personajes/arcoiris.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/arcoiris.jpg" alt="Arcoiris"></a>
+                    <a href="imagenes/personajes/arcoiris.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/arcoiris.png" alt="Arcoiris"></a>
                     <h4>Arcoiris</h4>
                 </div>
                 <div>
