--- a/contcomp.html
+++ b/contcomp.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/estiloscomp.css">
         <link href="css/lightbox.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre:ital,wght@1,300&display=swap" rel="stylesheet">
-        <link rel="icon" href="imagenes/ico-log/icono.png">
+        <link rel="icon" href="imagenes/ico-log/espanollog.png">
         <title>Hora De Aventura</title>
     </head>
 
@@ -37,7 +37,7 @@
 
             <article>
                 <div>
-                    <a href="imagenes/retratos/distandisland.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/distandisland.png" alt="Distand Islands"></a>
+                    <a href="imagenes/retratos/distandisland.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/distandisland.jpg" alt="Distand Islands"></a>
                 </div>
                 <div>
                     <h4>Distand Islands</h4>
