--- a/persecun.html
+++ b/persecun.html
@@ -58,8 +58,8 @@
                     <h4>Princesa Grumosa</h4>
                 </div>
                 <div>
-                    <a href="imagenes/personajes/gunter.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/gunter.png" alt="Princesa Grumosa"></a>
-                    <h4>Princesa Grumosa</h4>
+                    <a href="imagenes/personajes/gunter.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/personajes/gunter.png" alt="Gunter"></a>
+                    <h4>Gunter</h4>
                 </div>
             </article>
 
