--- a/perprin.html
+++ b/perprin.html
@@ -27,6 +27,8 @@
                             <li><a href="persecun.html">Personajes Secundarios</a></li>
                         </ul>
                     </li>
+                    <li><a href="tempo.html">Temporadas</a></li>
+                    <li><a href="fanart.html">FanArts</a></li>
                     <li><a href="contcomp.html">Contenido Complementario</a></li>
                     <li><a href="contacto.html">Contacto</a></li>   
                 </ul>
