Ultimas Actualizaciones del menú hamburguesa

--- a/contcomp.html
+++ b/contcomp.html
@@ -22,7 +22,7 @@
                 <ul class="nav-list">
                     <li><a href="index.html">Inicio</a></li>
                     <li class="dropdown">
-                        <a href="#">Personajes</a>
+                        <a href="#" class="anidado">Personajes</a>
                         <ul class="dropdown-menu">
                             <li><a href="perprin.html">Personajes Principales</a></li>
                             <li><a href="persecun.html">Personajes Secundarios</a></li>
@@ -37,33 +37,33 @@
             
         </header>
         <section>
-
+            <h1>Series</h1>
             <article>
                 <div>
-                    <a href="imagenes/retratos/distandisland.jpg" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/distandisland.jpg" alt="Distand Islands"></a>
+                    <a href="imagenes/retratos/distandisland.jpg" data-lightbox="socotroco" data-title="Distand Island"><img src="imagenes/retratos/distandisland.jpg" alt="Distand Islands"></a>
                 </div>
                 <div>
-                    <h4>Distand Islands</h4>
-                    <p>Hora de Aventura: Tierras Lejanas (Adventure Time: Distant) es una miniserie de 4 especiales animados
+                    <h2>Distand Islands</h2>
+                    <p>Hora de Aventura: Tierras Lejanas (<strong>Adventure Time: Distant</strong>) es una miniserie de 4 especiales animados
                         originales de HBO Max, centrada en diferentes historias de los personajes de Hora de Aventura y es producida
                         por Cartoon Network Studios y Frederator Studios.
-                        Tiene un total de 4 episodios, cada una dura en promedio 1 hora.</p>
+                        Tiene un total de <strong>4 episodios</strong>, cada una dura en promedio 1 hora.</p>
                 </div>
             </article>
             <article>
                 <div>
-                    <a href="imagenes/retratos/fionnacake.png" data-lightbox="socotroco" data-title="My caption"><img src="imagenes/retratos/fionnacake.png" alt="Fionna Y Cake"></a>
+                    <a href="imagenes/retratos/fionnacake.png" data-lightbox="socotroco" data-title="Fionna y Cake"><img src="imagenes/retratos/fionnacake.png" alt="Fionna Y Cake" class="fiocake"></a>
                 </div>
                 <div>
-                    <h4>Fionna and Cake</h4>
-                    <p>Hora de Aventura: Con Fionna y Cake (Adventure Time: Fionna & Cake) es un spin-off 
+                    <h2>Fionna and Cake</h2>
+                    <p>Hora de Aventura: Con Fionna y Cake (<strong>Adventure Time: Fionna & Cake</strong>) es un spin-off 
                         basado en Hora de Aventura. Es la primera serie de la franquicia que va destinada para un público adolescente
-                        y adulto. Fionna y Cake, con la ayuda del antiguo Rey Helado, Simon Petrikov, se embarcan en una aventura de
-                        salto multiversal y en un viaje de autodescubrimiento. Mientras tanto, un nuevo y poderoso antagonista,
+                        y adulto. <strong>Fionna y Cake</strong>, con la ayuda del antiguo Rey Helado, <strong>Simon Petrikov</strong>, se embarcan en una aventura de
+                        salto multiversal y en un viaje de autodescubrimiento.<br> Mientras tanto, un nuevo y poderoso antagonista,
                         decidido a seguirles la pista y borrarlos de la existencia, acecha en las sombras. La serie iniciará con
-                        Fionna y Cake despertando en un mundo alterno en donde no existe la magia y donde no pueden recordar sus
-                        vidas o aventuras vividas.
-                        Tiene un total de 8 episodios. Cada una dura, en promedio, de 25 a 30 minutos.
+                        Fionna y Cake despertando en un mundo alterno en donde <strong>no existe la magia</strong> y donde no pueden recordar sus
+                        vidas o aventuras vividas.<br>
+                        Tiene un total de <strong>8 episodios</strong>. Cada una dura, en promedio, de 25 a 30 minutos.
                     </p>
                            
                 </div>
@@ -90,8 +90,6 @@
            cerrar.addEventListener("click", () => {
                 nav.classList.remove("visible");
            })
-
-
 
         </script>
 
