--- a/contcomp.html
+++ b/contcomp.html
@@ -72,10 +72,10 @@
         </section>
 
         <footer>
-            <a href="https://www.facebook.com/adventuretime/"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com/cartoonnetwork"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
-            <a href="https://www.youtube.com/@AdventureTime/featured"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
-            <a href="https://www.instagram.com/cartoonnetworkofficial/"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/adventuretime/" target="_blank"><img src="imagenes/redes/facebook.png" alt="Facebook"></a>
+            <a href="https://twitter.com/cartoonnetwork" target="_blank"><img src="imagenes/redes/twitter.png" alt="Twitter"></a>
+            <a href="https://www.youtube.com/@AdventureTime/featured" target="_blank"><img src="imagenes/redes/youtube.png" alt="Youtube"></a>
+            <a href="https://www.instagram.com/cartoonnetworkofficial/" target="_blank"><img src="imagenes/redes/instagram.png" alt="Instagram"></a>
         </footer>
 
         <script src="js/lightbox-plus-jquery.js"></script>
